<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studentloancalculator.MainActivity">

    <EditText
        android:id="@+id/editLoanAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/editLoanAmt"
        android:gravity="left"/>

    <EditText
        android:id="@+id/editIntRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLoanAmt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/editIntRate"
        android:gravity="left"/>

    <EditText
        android:id="@+id/editMinPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editIntRate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/editMinPayment"
        android:gravity="left"/>

    <EditText
        android:id="@+id/editLoanTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMinPayment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/editLoanTerm"
        android:gravity="left"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLoanTerm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/calculate_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:text="@string/monthlyPayment"
        android:gravity="left"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/total_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthly_payment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/totalInterest"
        android:gravity="left"
        android:textSize="20dp" />
    
    <TextView
        android:id="@+id/num_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_interest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/numPayments"
        android:gravity="left"
        android:textSize="20dp" />
</RelativeLayout>
